# just-some-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  structure
.github/workflows/: build.yml
lib/SDL_image/lib/: libSDL2_image-2.0.so.0.6.0  libSDL2_image.la
lib/SDL_image/lib/pkgconfig/: SDL2_image.pc
lib/win/: CMakeLists.txt
libsrc/libjpeg-turbo/: Makefile
scripts/: build.sh  embed_shaders.sh
shader/: shader.frag  shader.vert
src/: Application.cpp  Application.hpp  ApplicationCore.cpp  ApplicationCore.hpp  EmbedShader.hpp  MyApplication.cpp  MyApplication.hpp  Shader.cpp  Shader.hpp  abstract_updatable.hpp  application.cpp  application.hpp  application_core.cpp  application_core.hpp  embed_shader.hpp  entity.hpp  glError.cpp  glError.hpp  gl_error.cpp  gl_error.hpp  main.cpp  shader.cpp  shader.hpp  transform.hpp
src/camera/: camera.hpp  creative_camera.hpp
src/core/: abstract_updatable.hpp  application_core.cpp  application_core.hpp  entity.hpp  gl_error.hpp  image.hpp  input_manager.hpp  multi_frame_data.hpp  shader.cpp  shader.hpp  time.hpp  transform.hpp
src/core/components/: component.hpp  creative_camera.hpp  mesh.hpp  transform.hpp
src/core/functions/: core.hpp  print.hpp
src/core/util/: mappings.hpp  primitive.hpp  print.hpp  shapes.hpp
src/core/util/primitives/: cube.hpp  cylinder.hpp  quad.hpp  sphere.hpp
textures/: missing.dds
